# ComfyUI-Voxels

./: __init__.py  pyproject.toml
nodes/: BatchToList.py  MeshToVoxel.py  VoxelBlockLoader.py  VoxelBlocksIntoVoxelVideo.py  VoxelVideoAPINodes.py  VoxelVideoLoader.py  VoxelVideoPreview.py  VoxelVideoViewer.py  VoxelizeMesh.py
web/: RoomEnvironment.js  VoxelVideoPlayer.js  useless_extension.js  voxel_block_renderer.js  voxel_video_preview.js  voxel_viewer_scene.js
web/html/: three_js_visualizer.html
web/js/: three_js_visualizer.js
