[project]
name = "comfyui-voxels"
description = "NODES:Mesh To Voxel, Voxel Block Saver, Voxel Viewer"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/DanielHabib/ComfyUI-Voxels"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Voxels"
Icon = ""
